--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,4 +1,5 @@
 /* Fonts */
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap");
 
 
 /* Vendors */
