--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -1,8 +1,10 @@
 .header {
-    position: absolute;
+    background-color: var(--noir);
+    position: sticky;
+    top: 0px;
     left: 0;
     width: 100%;
-    padding: var(--space2x) var(--space3x);
+    height: 75px;
     display: flex;
     align-items: center;
     justify-content: space-between;
