--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -43,6 +43,13 @@ h3{
 }
 
 .button__billet{
+    display: inline-flex;
+    padding: 23px 46px;
+    align-items: center;
+    gap: 10px;
+    flex-shrink: 0;
+    margin: 50%;
+
     border-radius: 5px;
     border: 2px solid var(--violet);
     background: var(--noir);
