--- a/src/css/components/menu.css
+++ b/src/css/components/menu.css
@@ -1,6 +1,4 @@
 .menu {
-    visibility: hidden;
-    display: flex;
     position: fixed;
     inset: 0;
     z-index: 1;
@@ -9,38 +7,46 @@
     flex-direction: column;
     justify-content: space-between;
     padding: 120px 40px 40px;
-    transform: translateX(100vw);
     transition: all 0.3s ease-in-out;
+    overflow: hidden;
 }
-.menu[aria-hidden="false"] {
-    transform: translateX(0);
-    visibility: visible;
+
+.menu[aria-hidden="true"] {
+    visibility: hidden;
+    transform: translateX(100vw);
+}
+
+.rugby__img{
+    position: absolute;
+    display: absolute;
+    margin-left: 80%;
+}
+
+.foot__img{
+    position: absolute;
+    margin-top: 80%;
+}
+
+.basket__img{
+    position: absolute;
+    margin-top: 80%;
+    margin-left: 80%;
 }
 
 .menu__link {
+    display:flex;
+    letter-spacing: 0.045rem;
+    font-family: Impact;
     color: var(--white);
     text-decoration: none;
-    font-size: var(--fs-xl);
+    font-size: var(--txt-XL);
     display: block;
 }
 
-.menu__link--silent {
-    color: var(--bleu);
-    font-size: var(--txt-S);
-}
-
 .menu__item {
+    display: absolute;
     margin-bottom: 40px;
     padding-bottom: 10px;
-    border-bottom: 1px solid var(--blanc);
-}
-
-.menu__social-network,
-.menu__terms {
-    display: flex;
-    gap: 20px;
-    justify-content: end;
-    margin-bottom: 20px;
 }
 
 .menu-btn {
@@ -56,9 +62,9 @@
 .menu-btn__bar::before,
 .menu-btn__bar::after {
     content: "";
-    background: var(--noir);
+    background: var(--blanc);
     height: 2px;
-    width: 100%;
+    width: 75px;
     position: absolute;
     border-radius: 2px;
     left: 0;
@@ -74,15 +80,15 @@
     top: 10px;
 }
 
-.menu-btn[aria-expanded="true"] .menu-btn__bar,
-.menu-btn[aria-expanded="true"] .menu-btn__bar::before,
-.menu-btn[aria-expanded="true"] .menu-btn__bar::after {
-  transform: rotate(135deg);
-  background: var(--white);
+.menu .button__billet{
+    display: inline-flex;
+    padding: 23px 46px;
+    position: absolute;
+    z-index: 10;
 }
 
-.menu-btn[aria-expanded="true"] .menu-btn__bar::before,
-.menu-btn[aria-expanded="true"] .menu-btn__bar::after {
-  transform: rotate(90deg);
-  top: 0;
+.underline{
+    text-decoration: underline;
+    text-decoration-color: var(--orange);
+    text-align: center;
 }
