--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -1,10 +1,10 @@
 .header {
+    margin: 0  !important;
     background-color: var(--noir);
     position: sticky;
-    top: 0px;
-    left: 0;
-    width: 100%;
-    height: 75px;
+    width: 393px;
+    height: auto;
+
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -13,3 +13,11 @@
 .header__logo {
     display: block;
 }
+
+.header__menu-btn{
+    background: none;
+    border: none;
+    display: flex;
+    gap: 5px;
+}
+
