--- a/src/css/style.css
+++ b/src/css/style.css
@@ -20,3 +20,4 @@
 @import "components/contact.css";
 @import "components/menu.css";
 @import "components/hero.css";
+@import "components/affiche_films.css";
