--- a/src/css/style.css
+++ b/src/css/style.css
@@ -21,3 +21,4 @@
 @import "components/menu.css";
 @import "components/hero.css";
 @import "components/affiche_films.css";
+@import "components/affiche_invites.css";
