--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -42,6 +42,8 @@ p{
 .hero__title{
     font-size: var(--txt-XL);
     text-align: center;
+    padding-top: 14px;
+    padding-bottom: 15%;
 }
 
 .button__normal{
@@ -65,8 +67,7 @@ p{
     text-decoration: none;
     color: var(--blanc);
     display: inline-flex;
-    padding: 30px 46px;
-    margin: 0 13px 180px 80px;
+    padding: 30px 40px;
     align-items: center;
     gap: 10px;
     flex-shrink: 0;
