--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,3 +22,4 @@
 @import "components/hero.css";
 @import "components/affiche_films.css";
 @import "components/affiche_invites.css";
+@import "components/article_edition_festival.css";
