--- a/src/css/style.css
+++ b/src/css/style.css
@@ -23,3 +23,4 @@
 @import "components/affiche_films.css";
 @import "components/affiche_invites.css";
 @import "components/article_edition_festival.css";
+@import "components/articles_infospratiques.css";
