--- a/src/css/components/menu.css
+++ b/src/css/components/menu.css
@@ -119,5 +119,6 @@
 }
 
 .menu-btn[aria-expanded="true"] .menu-btn__bar::after{
-  visibility: hidden;
+    visibility: hidden;
+    transition: all 0.1s ease-in-out;
 }
