--- a/src/css/base/main.css
+++ b/src/css/base/main.css
@@ -64,13 +64,17 @@ p{
 }
 
 .button__billet{
-    text-decoration: none;
-    color: var(--blanc);
     display: inline-flex;
     padding: 30px 40px;
+    height: 75px;
+    justify-content: center;
     align-items: center;
     gap: 10px;
     flex-shrink: 0;
+    margin-left: 20%;
+
+    text-decoration: none;
+    color: var(--blanc);
     font-family: var(--font-impact);
     font-size: var(--txt-L);
     border-radius: 5px;
