--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,3 +24,4 @@
 @import "components/affiche_invites.css";
 @import "components/article_edition_festival.css";
 @import "components/articles_infospratiques.css";
+@import "components/indexCSS.css"
